src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Market_Segment__c</fullName>
        <label>Market Segment</label>
        <picklist>
            <controllingField>Business_Unit__c</controllingField>
            <picklistValues>
                <fullName>2 Piece</fullName>
                <color>#0B6FCE</color>
            </picklistValues>
            <picklistValues>
                <fullName>3D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adhesive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Architect/Designer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Architectural</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automotive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bev Ends</fullName>
                <color>#78C953</color>
            </picklistValues>
            <picklistValues>
                <fullName>Beyond the Can</fullName>
                <color>#E27001</color>
            </picklistValues>
            <picklistValues>
                <fullName>Building Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coil Alum Trim Accent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coil Appliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coil Coater</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coil Entry Door</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coil Garage Door</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coil HVAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coil Lighting Fixture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coil Metal Building Prod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coil Miscellaneous</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coil Plastisol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coil Roof Deck</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COLLISION REPAIR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colorant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concrete &amp; Floor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Container</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Craft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decorative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distribution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elastomer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Market_Sub_Segment__c</fullName>
        <label>Market Sub Segment</label>
        <picklist>
            <controllingField>Market_Segment__c</controllingField>
            <picklistValues>
                <fullName>Appliances/HVAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Fleet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Components</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Container</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cure &amp; Seal Sealers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DTM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heavy Ag</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Horse Trailer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lawn &amp; Garden</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mastics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Metals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pipe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rebar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sealants</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specialties</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specialty Concrete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Top Coats</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transformers &amp; Utilities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Truck/Trailer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Water Valve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wood</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wood Trim</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>My_Close_Date__c</fullName>
        <description>This field is the actual close date based on the gregorian calendar. The end user can run reports for their opportunies closing within a calendar timeframe regardless of fiscal year calendar</description>
        <label>My Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NPI_Completed_Date__c</fullName>
        <label>NPI Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NaVigator__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>New Technology Platform</inlineHelpText>
        <label>NaVigator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Needs_Analysis_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Gather customer&apos;s requirements</description>
        <inlineHelpText>Use this to identify the opportunity pipeline by checking whether or not the needs analysis is complete.</inlineHelpText>
        <label>Needs Analysis Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Next_FY_Full_Revenue__c</fullName>
        <formula>if (Next_FY_Revenue_Override__c &lt;&gt; 0,
Next_FY_Revenue_Override__c,
if (Closed_In_Current_FY__c = 1,
Annual_Expected_Revenue__c - Current_FY_Full_Revenue__c ,
if (Closed_In_Next_FY__c = 1,
Close_Year_Full_Revenue__c,
0
)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Next FY Full Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Next_FY_Revenue_Override__c</fullName>
        <description>(Optional) Enter value in opportunity currency if you don&apos;t agree with Next FY Revenue calculated value
This value will override the formula for Next FY Revenue when it is not null.</description>
        <inlineHelpText>OPTIONAL: Update this field in the Opportunity Currency ONLY if there is
a business reason for overriding the calculation for Next FY Revenue</inlineHelpText>
        <label>Next FY Revenue Override</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Next_Steps__c</fullName>
        <label>Next Steps</label>
        <length>256</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Products_SKUs__c</fullName>
        <label>Number of Products/SKUs</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Units__c</fullName>
        <label>Number of Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opp_Age__c</fullName>
        <formula>CloseDate  -  Opp_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opp Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opp_Start_Date__c</fullName>
        <label>Opp Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_Notes__c</fullName>
        <label>Opportunity Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Pack_Test_Stage__c</fullName>
        <label>Valspar Pack Test Stage</label>
        <picklist>
            <picklistValues>
                <fullName>3 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12 months</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Pack_Trial__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicate if Pack Trials have been completed.</description>
        <inlineHelpText>Indicate if Pack Trials have been completed.</inlineHelpText>
        <label>Pack Trial</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Price_Quote_Requested_Date__c</fullName>
        <description>Enter the date a price quote was requested from the Pricing Manger</description>
        <inlineHelpText>Enter the date a price quote was requested from the Pricing Manger</inlineHelpText>
        <label>Price Quote Requested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Primary_Competitor__c</fullName>
        <description>Fill in the primary competitor.</description>
        <inlineHelpText>Use this to fill in the primary competitor field.</inlineHelpText>
        <label>Primary Competitor</label>
        <picklist>
            <picklistValues>
                <fullName>Competitor 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor 2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Prior_FY_Full_Revenue__c</fullName>
        <formula>if (Prior_FY_Revenue_Override__c &lt;&gt; 0,
Prior_FY_Revenue_Override__c,
if (Closed_In_Prior_FY__c = 1,
Close_Year_Full_Revenue__c,
0
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prior FY Full Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prior_FY_Revenue_Override__c</fullName>
        <description>OPTIONAL: Update this field in the Opportunity Currency ONLY if there is
a business reason for overriding the calculation for Prior FY Revenue</description>
        <inlineHelpText>OPTIONAL: Update this field in the Opportunity Currency ONLY if there is
a business reason for overriding the calculation for Prior FY Revenue</inlineHelpText>
        <label>Prior FY Revenue Override</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prior_FY_Revenue__c</fullName>
        <formula>if (Prior_FY_Revenue_Override__c &lt;&gt; 0 &amp;&amp; !ISPICKVAL(Job_Type__c,&apos;One-Time&apos;),
        Prior_FY_Revenue_Override__c,
        if (Closed_In_Prior_FY__c = 1 &amp;&amp; !ISPICKVAL(Job_Type__c,&apos;One-Time&apos;),
                      Close_Year_Revenue__c,
                      0
          )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>CALCULATED: If the Opportunity Close Date is in prior fiscal year, then
Annual Expected Revenue * (Close Date – Prior FY End Date) / 365 *
Exchange Rate * Probability. Else if the Opportunity Close Date is not in
the prior fiscal year, then 0.</inlineHelpText>
        <label>Prior FY Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Approval_Date__c</fullName>
        <label>Product Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product_Approved_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Approved By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <description>Initially created for Coil projects product code.</description>
        <label>Product Code</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Line_Description__c</fullName>
        <label>Product Line Description</label>
        <picklist>
            <picklistValues>
                <fullName>2000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>900</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Octocryl</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Octocoat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Octobase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Octobase Eco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Valspar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <label>Product Line</label>
        <picklist>
            <controllingField>Business_Unit__c</controllingField>
            <picklistValues>
                <fullName>Ace Royal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acrylic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alkyd</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aspire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barrier Resin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cabot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clark &amp; Kensington</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>De Beer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Epoxy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Epoxy Phenolic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GEN VI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HoK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NBPA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Octoral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oleoresinous</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Optimus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phenolic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Polyester</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private Label</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solvent-based</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spralac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Valspar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Valspar BP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Valspar Pro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Valspar Refinish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Various</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VIL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VIM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vinyl</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Product_Technology__c</fullName>
        <description>Product Technology</description>
        <inlineHelpText>Enter the Product Technologies for this Opportunity</inlineHelpText>
        <label>Product Technology</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <description>Initially created for Coil Projects</description>
        <label>Product Type</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Location__c</fullName>
        <description>For Coil Extrusion Asia</description>
        <label>Project Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Months__c</fullName>
        <description>For Coil Asia</description>
        <label>Project Months</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <description>Used for Coil Project tracking</description>
        <inlineHelpText>Enter the Project Name</inlineHelpText>
        <label>Project Name</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Product_M2_Converted__c</fullName>
        <description>For Coil Extrusion Asia</description>
        <formula>Project_Product_M2__c /5</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Product M2 Converted</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Product_M2__c</fullName>
        <description>For Coil Extrusion Asia</description>
        <label>Project Product M2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Product_Ton_Converted__c</fullName>
        <description>For Coil Extrusion Asia</description>
        <formula>Project_Product_Ton__c *20</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Product Ton Converted</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Product_Ton__c</fullName>
        <description>For Coil Extrusion Asia</description>
        <label>Project Product Ton</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Qualification_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Qualification Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Qualified_Date__c</fullName>
        <description>The date you qualified the opportunity.</description>
        <inlineHelpText>Enter the data you qualified the opportunity.</inlineHelpText>
        <label>Qualified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Quote_Submitted__c</fullName>
        <label>Quote Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>REACH_Approval_Req_d__c</fullName>
        <inlineHelpText>Select all that apply.</inlineHelpText>
        <label>Chemical Inv Approval Reqd?</label>
        <picklist>
            <picklistValues>
                <fullName>REACH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TSCA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DSL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NICNAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Reason_Won_Lost__c</fullName>
        <label>Reason Won/Lost</label>
        <picklist>
            <controllingField>StageName</controllingField>
            <picklistValues>
                <fullName>No Decision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service &amp; Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology Fit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inventory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Selection</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Regulatory_Approval__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Regulatory Approval</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Regulatory_Approved_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Regulatory Approved By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rejected_Date__c</fullName>
        <label>Rejected Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rejected_Notes__c</fullName>
        <label>Rejected Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Related_Account_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created for Coil/Extrusion to enter the Coater/Applicator (11i customer)</description>
        <inlineHelpText>Enter the Coater/Applicator this End User will be using on this Opportunity</inlineHelpText>
        <label>Related Account 1</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Related Accounts</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Account_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>An Account with a relationship to the existing account record that is not the parent account.</description>
        <inlineHelpText>Architect or &quot;Influencer&quot; that is driving the Opportunity for this End User.</inlineHelpText>
        <label>Related Account 2</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Related Accounts 2</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Request Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Request_Approval_to_Sell__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Request Approval to Sell</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Request_Director_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This field is for GI - North America manager use only.</inlineHelpText>
        <label>Request Director Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Request_Manager_Review__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Request Manager Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Request_Quote__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Request Quote</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_and_Tech_Initial_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sales and Tech Initial Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sample_Order__c</fullName>
        <label>Sample Order #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sample_Panel_Prep_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sample Panel Prep Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sample_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicate if Sample Requests have been completed.</description>
        <inlineHelpText>Indicate if Sample Requests have been completed.</inlineHelpText>
        <label>Sample Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sample_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sample Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sample_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sample Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sample__c</fullName>
        <description>Sample number from Valtrack</description>
        <inlineHelpText>Sample number from Valtrack</inlineHelpText>
        <label>Sample#</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Secondary_Competitor__c</fullName>
        <description>Use this to fill in the Secondary Competitor.</description>
        <inlineHelpText>Fill in the name of the Secondary Competitor.</inlineHelpText>
        <label>Secondary Competitor</label>
        <picklist>
            <picklistValues>
                <fullName>Secondary Competitor 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secondary Competitor 2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_Stage__c</fullName>
        <description>The substage picklist is controlled by the Stage field.</description>
        <label>Sub Stage</label>
        <picklist>
            <controllingField>StageName</controllingField>
            <picklistValues>
                <fullName>Needs Analysis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feasibility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value Proposition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Customization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Validation including Sample</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approval (Customer and Compliance)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proposal/Customer Quote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Negotiation / Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed Won</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed Lost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LWR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Technology__c</fullName>
        <description>This list of values is used to report on the number of opportunities within each technology segment.</description>
        <label>Technology</label>
        <picklist>
            <controllingField>Business_Unit__c</controllingField>
            <picklistValues>
                <fullName>E Coat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gel Coat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Liquid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Powder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specialty Chemicals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specialty Composites</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Steel Container Interior</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Steel Container Exterior</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bottle Crown Interior</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bottle Crown Exterior</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closure Interior</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closure Exterior</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aerosol Non BPA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aerosol Dome</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aerosol Bottoms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Powder ECP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Powder EFC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Top_Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checking this box will include this opportunity in the My Top Opportunities, My Team&apos;s Top Opportunties, and Valspar Top Opportunties Reports</description>
        <label>Top Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Act_New_Bus__c</fullName>
        <formula>Actual_Carry_Over_New_Bus__c  +  Actual_CFY_New_Bus__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Act New Bus</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Volume__c</fullName>
        <inlineHelpText>Total Annual Volume</inlineHelpText>
        <label>Total Volume</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trial_Notes__c</fullName>
        <label>Trial Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Trial_Results_Notes__c</fullName>
        <label>Trial Results Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Trial_Run_Charter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Trial Run Charter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Trial_Run_End_Date__c</fullName>
        <label>Trial Run End Date</label>
        <type>Date</type>
    </fields>
</CustomObject>